[package]
name = "pathplanning"
version = "0.1.0"
authors = ["Travis Sturzl <tsturzl@lefthandrobotics.com>"]
edition = "2018"

[profile.release]
lto = true

[[bench]]
name = "all"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
geo = "0.12.2"
rand = "0.7"
geo-offset = "0.1.0"
rayon = "1.3.0"
kdtree = "0.6.0"
